Fixed tippy creating scrollbar on body

--- a/projects/ng-dialogs/src/styles.scss
+++ b/projects/ng-dialogs/src/styles.scss
@@ -38,4 +38,5 @@ body {
   margin: 0;
   background-color: transparent;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow: hidden;
 }
